--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </ul>
               </li>
 
-              <li class="navbar__item">
+              <li class="navbar__item navbar__item--width">
                 <a class="dropdown__button" href="#">Hosting</a>
               </li>
 
@@ -1302,85 +1302,92 @@
           <h2 class="section-title section-title--gradient">
             Vision, mission, and values of the VSYS HOST
           </h2>
-          <p class="values__description">
-            VSYS Host owns its server hardware and network equipment; therefore,
-            there is no reseller markup, allowing for attractive costs for the
-            consumer. We are pleased to provide competitively priced bandwidth
-            thanks to a unique ideal balance between incoming traffic from local
-            customers and outgoing traffic to international customers.
-          </p>
-
-          <h3 class="section-subtitle section-subtitle--blue">Values</h3>
-          <ul class="values__list">
-            <li class="values__item">
-              <img
-                class="values__svg"
-                src="./images/value-illustration_1.svg"
-                alt="Value illustration"
-              />
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
-            </li>
-            <li class="values__item">
-              <img
-                class="values__svg"
-                src="./images/value-illustration_2.svg"
-                alt="Value illustration"
-              />
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
-            </li>
-            <li class="values__item">
-              <img
-                class="values__svg"
-                src="./images/value-illustration_3.svg"
-                alt="Value illustration"
-              />
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
-            </li>
-            <li class="values__item">
-              <img
-                class="values__svg"
-                src="./images/value-illustration_4.svg"
-                alt="Value illustration"
-              />
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
-            </li>
-            <li class="values__item">
-              <img
-                class="values__svg"
-                src="./images/value-illustration_5.svg"
-                alt="Value illustration"
-              />
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
-            </li>
-          </ul>
-
           <div class="values__box">
-            <div>
-              <h3 class="section-subtitle section-subtitle--blue">Vision</h3>
+            <div class="values__content--1">
               <p>
-                We are pleased to provide competitively priced bandwidth thanks
-                to a unique ideal balance between incoming traffic from local
-                customers and outgoing traffic to international customers.
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
               </p>
+
+              <div class="">
+                <h3 class="section-subtitle section-subtitle--blue">Vision</h3>
+                <p>
+                  We are pleased to provide competitively priced bandwidth
+                  thanks to a unique ideal balance between incoming traffic from
+                  local customers and outgoing traffic to international
+                  customers.
+                </p>
+              </div>
+
+              <div>
+                <h3 class="section-subtitle section-subtitle--blue">Mission</h3>
+                <p>
+                  We are pleased to provide competitively priced bandwidth
+                  thanks to a unique ideal balance between incoming traffic from
+                  local customers and outgoing traffic to international
+                  customers.
+                </p>
+              </div>
             </div>
 
-            <div>
-              <h3 class="section-subtitle section-subtitle--blue">Mission</h3>
-              <p>
-                We are pleased to provide competitively priced bandwidth thanks
-                to a unique ideal balance between incoming traffic from local
-                customers and outgoing traffic to international customers.
-              </p>
+            <div class="values__content--2">
+              <h3 class="section-subtitle section-subtitle--blue">Values</h3>
+              <ul class="values__list">
+                <li class="values__item">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_1.svg"
+                    alt="Value illustration"
+                  />
+                  <h4 class="section-subtitle values__text">
+                    CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+                  </h4>
+                </li>
+                <li class="values__item">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_2.svg"
+                    alt="Value illustration"
+                  />
+                  <h4 class="section-subtitle values__text">
+                    PRIVACY AND ANONYMITY OF YOUR DATA
+                  </h4>
+                </li>
+                <li class="values__item">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_3.svg"
+                    alt="Value illustration"
+                  />
+                  <h4 class="section-subtitle values__text">
+                    HIGH LEVEL OF TECHNICAL SUPPORT
+                  </h4>
+                </li>
+                <li class="values__item">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_4.svg"
+                    alt="Value illustration"
+                  />
+                  <h4 class="section-subtitle values__text">
+                    FOCUS ON THE CUSTOMER AND HIS NEEDS
+                  </h4>
+                </li>
+                <li class="values__item">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_5.svg"
+                    alt="Value illustration"
+                  />
+                  <h4 class="section-subtitle values__text">
+                    IT IS EASY TO SCALE WITH US
+                  </h4>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -1467,56 +1474,60 @@
           <h2 class="section-title section-title--white">Payment methods</h2>
           <ul class="payment__list">
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
+                  href="./images/sprite.svg#payment-bitcoin"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
+                  href="./images/sprite.svg#payment-paypal"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
+                  href="./images/sprite.svg#payment-bank-transfer"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
+                  href="./images/sprite.svg#payment-webmoney"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
+                  href="./images/sprite.svg#payment-visa"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
-                  class="payment__svg"
-                  href="./images/sprite.svg#payment-mastercard"
-                ></use>
-              </svg>
-            </li>
-            <li class="payment__item">
-              <svg width="100px" height="74px" class="payment__img">
-                <use
+                  width="90px"
+                  height="60px"
                   class="payment__svg"
                   href="./images/sprite.svg#payment-mastercard"
                 ></use>
@@ -1881,52 +1892,34 @@
           <ul class="footer-payment">
             <h3 class="section-subtitle footer__subtitle">Payment system</h3>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-bitcoin-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-bitcoin"></use>
+              </svg>
             </li>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-paypal-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-paypal"></use>
+              </svg>
             </li>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-bank-transfer-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-bank-transfer"></use>
+              </svg>
             </li>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-webmoney-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-webmoney"></use>
+              </svg>
             </li>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-visa-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-visa"></use>
+              </svg>
             </li>
             <li class="footer-payment__item">
-              <a class="footer-payment__link" href="#"
-                ><img
-                  class="footer-payment__img"
-                  src="./images/./payment-mastercard-icon.svg"
-                  alt=""
-              /></a>
+              <svg class="footer-payment__img">
+                <use href="./images/sprite.svg#payment-mastercard"></use>
+              </svg>
             </li>
           </ul>
         </div>
