--- a/index.html
+++ b/index.html
@@ -71,23 +71,31 @@
                 href="#"
                 >CONTACT US<span class="menu-arrow"></span
               ></a>
-              <ul class="dropdown__menu dropdown--mt14">
+              <ul class="dropdown__menu dropdown--mt14 dropdown__menu--white">
                 <li>
-                  <a class="dropdown__link" href="#"
+                  <a class="dropdown__link dropdown__link--black" href="#"
                     >OPEN A NEW SUPPORT TICKET</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown__link" href="#">CONTACT US FORM</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >CONTACT US FORM</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown__link" href="#">LIVE CHAT</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >LIVE CHAT</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown__link" href="#">E-MAIL: INFO@VSYS.HOST</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >E-MAIL: INFO@VSYS.HOST</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown__link" href="#">TEL: +380 (44) 591-5679</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >TEL: +380 (44) 591-5679</a
+                  >
                 </li>
               </ul>
             </li>
@@ -105,12 +113,18 @@
                 </svg>
                 English <span class="menu-arrow"></span>
               </a>
-              <ul class="dropdown__menu dropdown__menu--lang">
+              <ul
+                class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
+              >
                 <li>
-                  <a class="dropdown__link" href="#">UA</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >UA</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown__link" href="#">Русский</a>
+                  <a class="dropdown__link dropdown__link--black" href="#"
+                    >Русский</a
+                  >
                 </li>
                 <li></li>
               </ul>
@@ -144,7 +158,7 @@
           <div class="mobile-menu" id="mobile-menu" data-menu>
             <ul class="navbar__list mobile-menu__container">
               <li class="navbar__item">
-                <button type="button" class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Servers<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -184,9 +198,9 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >VPS<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button">
+                  VPS<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -223,14 +237,14 @@
                 </ul>
               </li>
 
-              <li class="navbar__item">
+              <li class="navbar__item navbar__item--width">
                 <a class="dropdown__button" href="#">Hosting</a>
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >Cloud<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button" href="#">
+                  Cloud<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -268,9 +282,9 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >Services<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button" href="#">
+                  Services<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -308,9 +322,9 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >Solutions<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button" href="#">
+                  Solutions<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -348,9 +362,9 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >Company<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button" href="#">
+                  Company<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -388,9 +402,9 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#"
-                  >Recources<span class="menu-arrow"></span
-                ></a>
+                <button class="dropdown__button" href="#">
+                  Recources<span class="menu-arrow"></span>
+                </button>
                 <ul class="dropdown__menu">
                   <li>
                     <a class="dropdown__link" href="#">OFFSHORE SERVERS</a>
@@ -595,33 +609,15 @@
       <section class="services">
         <div class="container">
           <div class="services__container">
-            <input
-              checked
-              type="radio"
-              name="services_menu_toggle"
-              id="servers_button"
-              class="services-menu__button"
-            />
-            <input
-              type="radio"
-              name="services_menu_toggle"
-              id="hosting_button"
-              class="services-menu__button"
-            />
-            <input
-              type="radio"
-              name="services_menu_toggle"
-              id="cloud_button"
-              class="services-menu__button"
-            />
-            <input
-              type="radio"
-              name="services_menu_toggle"
-              id="services_button"
-              class="services-menu__button"
-            />
             <ul class="services-menu">
               <li class="services-menu__item">
+                <input
+                  checked
+                  type="radio"
+                  name="services_menu_toggle"
+                  id="servers_button"
+                  class="services-menu__button"
+                />
                 <label
                   tabindex="0"
                   for="servers_button"
@@ -631,6 +627,12 @@
               </li>
 
               <li class="services-menu__item">
+                <input
+                  type="radio"
+                  name="services_menu_toggle"
+                  id="hosting_button"
+                  class="services-menu__button"
+                />
                 <label
                   tabindex="0"
                   for="hosting_button"
@@ -640,6 +642,12 @@
               </li>
 
               <li class="services-menu__item">
+                <input
+                  type="radio"
+                  name="services_menu_toggle"
+                  id="cloud_button"
+                  class="services-menu__button"
+                />
                 <label
                   tabindex="0"
                   for="cloud_button"
@@ -649,6 +657,12 @@
               </li>
 
               <li class="services-menu__item">
+                <input
+                  type="radio"
+                  name="services_menu_toggle"
+                  id="services_button"
+                  class="services-menu__button"
+                />
                 <label
                   tabindex="0"
                   for="services_button"
@@ -1163,7 +1177,10 @@
           <ul class="advantages__list">
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_1"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1179,7 +1196,10 @@
             </li>
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_2"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_2"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1195,7 +1215,10 @@
             </li>
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_3"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_3"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1211,7 +1234,10 @@
             </li>
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_4"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_4"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1227,7 +1253,10 @@
             </li>
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_5"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_5"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1243,7 +1272,10 @@
             </li>
             <li class="advantages__item">
               <svg class="advantages__image" width="90px" height="90px">
-                <use href="./images/sprite.svg#advantages-image_6"></use>
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_6"
+                ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
@@ -1456,55 +1488,61 @@
           <h2 class="section-title section-title--white">Payment methods</h2>
           <ul class="payment__list">
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-bitcoin"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-paypal"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-bank-transfer"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-webmoney"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-visa"
                 ></use>
               </svg>
             </li>
             <li class="payment__item">
-              <svg width="90px" height="60px">
+              <svg width="90px" height="60px" class="payment__img">
                 <use
                   width="90px"
                   height="60px"
+                  class="payment__svg"
                   href="./images/sprite.svg#payment-mastercard"
                 ></use>
               </svg>
@@ -1901,7 +1939,7 @@
         </div>
       </div>
     </footer>
-    <script src="./js/script.js"></script>
+
     <script src="./js/dropdown.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/menu.js"></script>
